sample-apps/emojivoto/web-svc-service-patch.yml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: emojivoto
spec:
  # type: LoadBalancer
  selector:
    app: web-svc
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
