sample-apps/emojivoto/web-svc-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: emojivoto-web
  namespace: emojivoto
spec:
  rules:
  - host: <your-hostname>
    http:
      paths:
      - backend:
          serviceName: web-svc
          servicePort: http
